--- a/Investigation.API/appsettings.json
+++ b/Investigation.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server= BLANCORR;Database=Invesigation;Encrypt=False;User Id=dba;Password=Abcd1234*;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
