--- a/Investigation.API/Investigation.API.csproj
+++ b/Investigation.API/Investigation.API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -19,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Investigation.Shared\Investigation.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
