Creacion de la entidad Cientifico con controllers

--- a/Investigation.API/appsettings.json
+++ b/Investigation.API/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server= BLANCORR;Database=Invesigation;Encrypt=False;User Id=dba;Password=Abcd1234*;"
+    "DefaultConnection": "Server= PC-JULIO\\SERVER_Almacen;Database=Investigation;Encrypt=False;User Id=dba;Password=Abcd1234*;"
   },
   "Logging": {
     "LogLevel": {
